Move editor extras bar in to prevent overlapping next list item

--- a/src/frontend/src/components/retro-formats/mood/MoodRetro.less
+++ b/src/frontend/src/components/retro-formats/mood/MoodRetro.less
@@ -185,12 +185,25 @@
       display: none;
       position: absolute;
       left: 16px;
-      top: 100%;
-      background: #FFFFFF;
-      border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
+      top: calc(100% - 12px);
       align-items: center;
       padding: 0 4px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 12px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #FFFFFF;
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
+      }
+
+      > * {
+        z-index: 1;
+      }
 
       .label {
         font-size: 0.75rem;
@@ -256,7 +269,7 @@
     box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.08);
     transition: background 0.1s ease-out, box-shadow 0.1s ease-out;
 
-    .attachments {
+    .attachments::before {
       transition: background 0.1s ease-out, box-shadow 0.1s ease-out;
     }
 
@@ -281,7 +294,7 @@
         color: @pale-text-on-white;
       }
 
-      .attachments {
+      .attachments::before {
         background: rgba(255, 255, 255, 0.8);
       }
     }
@@ -294,7 +307,7 @@
         color: @pale-text-on-white;
       }
 
-      .attachments {
+      .attachments::before {
         background: #FFFFFF;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
       }
